# py-orb-slam3

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dependencies.md  README.md  pyproject.toml  vcpkg.json
.cache/clangd/index/: Atlas.cc.5CBD81DE170B8EC7.idx  Atlas.h.1736316F03945DC3.idx  BowVector.cpp.759A559CFE01D5D1.idx  BowVector.h.3C165A4951C091D8.idx  CLI11.hpp.DF290CD97C861F45.idx  Config.cc.5425A62E296CFF74.idx  Config.h.6AB1DD9809C93351.idx  Converter.cc.F4D0FC8EFF384A35.idx  Converter.h.8A731C9E93EB21DE.idx  FClass.h.4643388C55815879.idx  FORB.cpp.849622A0C7670A60.idx  FORB.h.0DB0ACCC33A3E3E3.idx  FeatureVector.cpp.95F57CDB27E51375.idx  FeatureVector.h.4AE1CC71B0400E49.idx  Frame.cc.DB2FDBA0151A546A.idx  Frame.h.D9151BCB6662CF3A.idx  FrameDrawer.cc.F19AD2BF8A5DA687.idx  FrameDrawer.h.A9CDAF9773F8869C.idx  G2oTypes.cc.692EED9EC48105A6.idx  G2oTypes.h.4B4DC605AC67751D.idx  GeometricCamera.h.EE91A1B2265FEDA5.idx  GeometricTools.cc.B9D3E2CB4BE08F4E.idx  GeometricTools.h.CCA68F3800D6F789.idx  ImuTypes.cc.B61DC0B8306C5F8C.idx  ImuTypes.h.947A181FA7860406.idx  KannalaBrandt8.cpp.42AA841416AA7714.idx  KannalaBrandt8.h.79554F41D77741BF.idx  KeyFrame.cc.3A502462D6AF4773.idx  KeyFrame.h.2A31CDEC44372236.idx  KeyFrameDatabase.cc.8497FEA26F4079C5.idx  KeyFrameDatabase.h.4429F5509756E105.idx  LocalMapping.cc.87DF8EC4335A1D57.idx  LocalMapping.h.39A5B912CF6EA8F3.idx  LoopClosing.cc.E5C90A5384D96763.idx  LoopClosing.h.28E0D4C7AE94312E.idx  MLPnPsolver.cpp.94100013AA5EE2CA.idx  MLPnPsolver.h.3D5F74F3A5CA03CA.idx  Map.cc.F3313013760C98D8.idx  Map.h.1F9401F208D72E52.idx  MapDrawer.cc.B5E77C4C685A123C.idx  (+136 more)
Examples/Monocular-Inertial/: gopro_slam.cc
cmake/: EnableVcpkg.cmake
docs/: build-and-headless-porting.md  pyorbslam3-architecture.md
include/: Frame.h  MapDrawer.h  System.h  Tracking.h
python/: CMakeLists.txt  README.md
python/pyorbslam3/: __init__.py
python/src/: bindings.cpp
src/: Frame.cc  Map.cc  MapDrawer.cc  System.cc  Tracking.cc
src/py_orb_slam3/: __init__.py  _assets.py  bindings.cpp
tests/: test_package.py
