[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.12",
  "numpy>=1.26",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyorbslam3"
version = "0.1.0"
description = "Python bindings for headless ORB_SLAM3"
readme = "python/README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "python"
wheel.packages = ["python/pyorbslam3"]
build-dir = "build/{wheel_tag}"
